TreeHerder logs have repeated 3 lines of error output with "Failed to call GetIdletime(): GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.Mutter.IdleMonitor was not provided by any .service files"
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
People
(Reporter: dholbert, Assigned: stransky)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
I just noticed this bit of background noise in a linux WPT test-log on treeherder (blank lines inserted by me for readability):
INFO - PID 6675 | [Parent 6675, Main Thread] WARNING: Failed to call GetIdletime(): GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.Mutter.IdleMonitor was not provided by any .service files
INFO - PID 6675 | : 'glib warning', file /builds/worker/checkouts/gecko/toolkit/xre/nsSigHandlers.cpp:187
INFO - PID 6675 | ** (firefox-default:6675): WARNING **: 17:19:52.984: Failed to call GetIdletime(): GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.Mutter.IdleMonitor was not provided by any .service files
The log in question was here (for intermittent bug 1865698):
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=436889202&repo=mozilla-central&lineNumber=13906
Raw log: https://firefoxci.taskcluster-artifacts.net/WQTYt1eFRlyPQ6hN7WFHMA/0/public/logs/live_backing.log
and it looks like it's got 36 copies of this triplet of log messages.
Is this logging important? Can we remove or suppress it, to avoid it being accidentally suspected as a source-of-trouble if it happens to occur just before a real test failure? (as in the above-linked log)
(I'm marking as followup to bug 1847699 and toggling ni=stransky since I assume this comes from this line where we reference org.gnome.Mutter.IdleMonitor: https://hg.mozilla.org/mozilla-central/rev/8508522a874d#l1.187 )
| Reporter | ||
Updated•2 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 3•2 years ago
|
||
| bugherder | ||
Comment 4•2 years ago
|
||
Will the commits for this that will apply to firefox also be applied to Thunderbird beta 121? If not may I request that this feeds into Thunderbird beta?
| Reporter | ||
Comment 5•2 years ago
|
||
(For context: it looks like Mike's noticing this logging locally in bug 1865035, which I guess is a duplicate of this one.)
Stransky, would you feel ok requesting uplift? Seems pretty low-risk given the nature of the change and given that we're early in the beta cycle.
| Assignee | ||
Comment 7•2 years ago
|
||
Comment on attachment 9364661 [details]
Bug 1865723 [Linux] Reduce noise from nsUserIdleServiceGTK r?dholbert
Beta/Release Uplift Approval Request
- User impact if declined: We're flooding logs with irrelevant messages from wake lock code.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Logging change.
- String changes made/needed:
- Is Android affected?: No
Comment 8•2 years ago
|
||
Comment on attachment 9364661 [details]
Bug 1865723 [Linux] Reduce noise from nsUserIdleServiceGTK r?dholbert
Approved for 121.0b5.
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Confirmed that the bug is resolved in Thunderbird beta 121.0b3 as built this evening.
Description
•