Bug 1865723 [Linux] Reduce noise from nsUserIdleServiceGTK r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D194182